Style latest posts block, fix landing & alignwide padding

--- a/sass/components/_page-templates.scss
+++ b/sass/components/_page-templates.scss
@@ -2,7 +2,7 @@
 .page-template-landing {
 	.content {
 		padding-top: 0;
-		padding-right: 0;
+		padding-bottom: 0;
 		display: block;
 	}
 }
