--- a/sass/components/blocks/_style.scss
+++ b/sass/components/blocks/_style.scss
@@ -13,17 +13,6 @@
 		margin-right: 0;
 	}
 }
-.alignwide {
-	--width: 100vw;
-
-	width: var(--width);
-	max-width: var(--width);
-	margin-left: calc(50% - var(--width)/2);
-	margin-right: calc(50% - var(--width)/2);
-
-	padding-left: 12px;
-	padding-right: 12px;
-}
 .wp-block-image.alignwide img {
 	width: auto;
 	@include center-block;
@@ -31,9 +20,12 @@
 
 @media(min-width: 768px) {
 	.alignwide {
-		padding-left: 0;
-		padding-right: 0;
 		--width: var(--container-md);
+
+		width: var(--width);
+		max-width: var(--width);
+		margin-left: calc(50% - var(--width)/2);
+		margin-right: calc(50% - var(--width)/2);
 	}
 }
 @media(min-width: 1024px) {
